# stopstart

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
stopstart/: __init__.py
tests/: test_timer.py
timer/: __init__.py
