[project]
name = "stopstart"
version = "0.1.0"
description = "A simple timer class for tracking elapsed time across multiple sessions, with detailed statistics and formatted output."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.3.4",
    "ruff>=0.8.3",
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
]
